# trpgbot

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md
config/: config.example.toml
entity/: Cargo.toml  Makefile.toml
entity/src/: lib.rs  nist_rand_entry.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
scripts/: dotenv.rs
src/: main.rs
src/commands/: mod.rs  music.rs  ping.rs  roll.rs
src/repo/: mod.rs  music.rs  nist_beacon.rs
