[package]
name = "trpgbot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
migration = { path = "migration" }
entity = { path = "entity" }

poise = "0.6"
lavalink-rs = { version = "0.12", default-features = false, features = ["macros", "native-tls", "serenity", "songbird"] }
songbird = { version = "0.4", default-features = false, features = ["serenity", "gateway", "native"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
serde = "1"
figment = { version = "0.10.19", features = ["toml"] }
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1"
thiserror = "1"
tap = "1"
time = { version = "0.3", features = ["serde", "formatting"] }
serde-hex = "0.1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
bitvec = "1"
futures = "*"
